--- a/Physik/index.html
+++ b/Physik/index.html
@@ -26,6 +26,11 @@
         <li>
           <a href="radioaktivitaet.html" class="indexLink">Radioaktivität</a>
         </li>
+        <li>
+          <a href="formelsammlungRadioaktivitaet.html" class="indexLink"
+            >Formelsammlung Radioaktivität</a
+          >
+        </li>
       </ol>
 
       <h2>Klassische Mechanik</h2>
