--- a/Physik/radioaktivitaet.html
+++ b/Physik/radioaktivitaet.html
@@ -130,7 +130,9 @@
           </p>
           <p><u>Zerfallsgleichung:</u></p>
 
-          <p>$\ce{^A_Z K_1 -> ^A_{Z+1}K_2 + ^0_{-1} \beta + ^0_0 \bar{\nu}}$</p>
+          <p>
+            $\ce{^A_Z K_1 -> ^A_{Z+1}K_2 + ^0_{-1} \beta\ + ^0_0 \bar{\nu}}$
+          </p>
         </li>
         <li>
           <p><u>$\beta^+$-Strahlung</u>:</p>
@@ -149,7 +151,7 @@
           </p>
           <p><u>Zerfallsgleichung:</u></p>
 
-          <p>$\ce{^A_Z K_1 -> ^A_{Z-1}K_2 + ^0_{+1} \beta + ^0_0 \nu}$</p>
+          <p>$\ce{^A_Z K_1 -> ^A_{Z-1}K_2 + ^0_{+1} \beta\ + ^0_0 \nu}$</p>
         </li>
         <li>
           <p><u>Gammastrahlung</u></p>
@@ -225,6 +227,8 @@
       $$ N(t) = N_0 \cdot e^{-\lambda t} $$ $$\Leftrightarrow N(t) \cdot \lambda
       = N_0 \cdot \lambda \cdot e^{-\lambda t} $$ $$\Leftrightarrow A(t) = A_0
       \cdot e^{-\lambda t} $$
+      <h3>Formel</h3>
+      $$A(t) = A_0 \cdot e^{-\lambda t} $$
       <h2>Halbwertszeit</h2>
       <p>
         Die Halbwertszeit $T_{\frac{1}{2}}$ gibt die Zeit ein die ein
