--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -54,9 +54,7 @@
           <p><u>Géométrie dans l'espace</u></p>
           <ul>
             <li>
-              <a href="Mathe/html/produitVectorielle.html"
-                >Produit Vectorielle</a
-              >
+              <a href="Mathe/html/produitScalaire.html">Produit Scalaire</a>
             </li>
           </ul>
         </li>
