--- a/Archiv/Mathe/html/produitScalaire.html
+++ b/Archiv/Mathe/html/produitScalaire.html
@@ -13,15 +13,16 @@
     </style>
   </head>
   <body>
-    <!-- <iframe
+    <iframe
       title="Dokument"
       id="myPDF"
       src="../pdf/Geometrie/Produit Scalaire.pdf"
       frameborder="0"
-    ></iframe> -->
-    <embed
+    ></iframe>
+    <!-- <embed
       src="../pdf/Geometrie/Produit Vectorielle.pdf"
       type="application/pdf"
-    />
+    /> -->
+    <!-- <a href="../pdf/Geometrie/Produit Scalaire.pdf">Produit Scalaire</a> -->
   </body>
 </html>
