--- a/Chemie/alkane.html
+++ b/Chemie/alkane.html
@@ -58,7 +58,7 @@
             <td><p>$\ce{C2H6}$</p></td>
             <td><p>$\ce{CH3 - CH3}$</p></td>
             <td>
-              <p>$$</p>
+              <p>-</p>
             </td>
           </tr>
           <tr>
@@ -101,15 +101,19 @@
       <h2>Nomenklatur</h2>
       <h3>Bemerkungen</h3>
       <p>
-        Die Nomenklaturregeln der IUPAC (International Union of Pure and Applied
-        Chemistry) ordnen jedem Alkan einen eindeutigen Namen zu.
+        Die Nomenklaturregeln der
+        <abbr title="International Union of Pure and Applied Chemistry"
+          >IUPAC</abbr
+        >
+        (International Union of Pure and Applied Chemistry) ordnen jedem Alkan
+        einen eindeutigen Namen zu.
       </p>
       <h3>Regeln</h3>
       <ol>
         <li>
           <p>
-            Die Hauptkette ist die längste Aneinanderreihung von $\ce{C
-            -}$Atomen im Molekül. Sie bestimmt den Stamm- namen des Alkans.
+            Die Hauptkette ist die längste Aneinanderreihung von $\ce{C}$-Atomen
+            im Molekül. Sie bestimmt den Stammnamen des Alkans.
           </p>
         </li>
         <li>
@@ -122,9 +126,11 @@
         </li>
         <li>
           <p>
-            Die Seitenketten (Alkylgruppen) oder Substituenten (Atome anderer
-            Elemente) werden benannt:
+            Die Seitenketten auch Alkylgruppen genannt oder Substituenten werden
+            benannt:
           </p>
+          <h3>Erklärung</h3>
+          <p>Substituenten sind Atome anderer Elemente</p>
           <div class="xScrollable">
             <table>
               <tr>
@@ -240,7 +246,7 @@
           <p><u>Viskosität:</u></p>
           <p>
             Je größer die Kräfte zwischen den Teilchen des Stoffs umso
-            schlechter können die Teil- chen im flüssigen Zustand aneinander
+            schlechter können die Teilchen im flüssigen Zustand aneinander
             vorbei gleiten und umso höher ist die Viskosität.
           </p>
         </li>
@@ -266,8 +272,8 @@
         <li>
           <p><u>Wasserstoffbrückenbindungen:</u></p>
           <p>
-            Kräfte zwischen einem stark positivierten $\ce{H -}$Atom und einem
-            freien Elektronenpaar eines Atoms mit negativer Teilladung
+            Kräfte zwischen einem stark positivierten $\ce{H}$-Atom und einem
+            freien Elektronenpaar eines Atoms mit negativer Teilladung.
           </p>
         </li>
       </ul>
@@ -286,7 +292,7 @@
         </li>
         <li>
           <p>
-            die Siedepunkte von kugelförmigen, also stark verzweigteMoleküle
+            die Siedepunkte von kugelförmigen, also stark verzweigten Moleküle
             sind kleiner als die von unverzweigten Molekülen
           </p>
         </li>
@@ -294,9 +300,11 @@
       <h2>Viskosität</h2>
       <p>Schlecht allgemeng Erklärung</p>
       <p>
-        Zwischen Decan-Molekülen wirken starke van-der-Wals Kräfte als zwischen
-        den Heptan-Molekülen. Dadurch können die Decan-Molekülen weniger gut
-        vorbei gleiten. Decan ist also dickflüssiger als Heptan
+        Wenn die Moleküle kugelförmiger werden desto weniger
+        van-der-Waals-Kräfte können entstehen. Das bedeutet also längere
+        Hauptketten die so wenig wie möglich verzweigt sind, also geeignet
+        van-der-Waals-Kräfte auszuüben, sind dickflüssiger also hochviskoser als
+        kugelförmigere Moleküle oder kurzkettige Alkane.
       </p>
       <h2>Löslichkeit</h2>
       <ol>
@@ -325,6 +333,87 @@
         Polare Stoffe sind in polaren Lösungsmitteln löslich. Unpolare Stoffe
         sind in unpolaren Lösungsmitteln löslich.
       </p>
+      <h2>Reaktionen der Alkane</h2>
+      <p>
+        Alkane sind sehr reaktionsträge. Mit sehr reaktionsfreudigen
+        Reaktionspartnern, vor allem mit Sauerstoff und Halogenen, können sie
+        jedoch unter bestimmten Bedingungen stark reagieren.
+      </p>
+      <h2>Verbrennung</h2>
+      <ul>
+        <li>
+          <p><u>Vollständige Verbrennung</u></p>
+          <p>
+            Alkan $\ce{+}$ Sauerstoff $\ce{->}$ Kohelstoffdioxid $\ce{+}$ Wasser
+          </p>
+        </li>
+        <li>
+          <p><u>Unvollständige Verbrennung</u></p>
+          <p>Alkan $\ce{+}$ Sauerstoff $\ce{->}$ Kohelstoff $\ce{+}$ Wasser</p>
+          <p>Der hier entstehende Kohlenstoff wird als Ru&beta; bezeichnet.</p>
+        </li>
+      </ul>
+      <h3>Bemerkung</h3>
+      <p>
+        Alkane neigen wegen ihrem hohen Sauerstoff verbrauch bei Verbrennungen
+        zu unvollständigen Verbrennungen. <br />
+        Dies ist durch eine gelb leuchtende Flamme, so wie Ru&beta;entwicklung
+        zu sehen.
+      </p>
+      <h2>Substitution</h2>
+      <p>
+        Eine Reaktion, bei der Atome oder Atomgruppen eines Moleküls durch
+        andere Atome oder Atomgruppen ersetzt werden, bezeichnet man
+        Substitution.
+      </p>
+      <h2>Mechanismus der radikalen Substitution</h2>
+      <ol>
+        <li>
+          <p><u>Startreaktion</u></p>
+          <p>
+            Durch homolytische Spaltung von $\ce{Cl2}$-Molekülen entstehen
+            Chlorteilchen mit ungepaarten Au&beta;enelektronen, sogenannte
+            Chlorradikale. Die Radikale sind sehr reaktionsfreudig.
+          </p>
+          <img
+            src="img/Alkane/Startreaktion.png"
+            alt="startreaktion"
+            class="zeichnungen"
+          />
+        </li>
+        <li>
+          <p><u>Kettenreaktion</u></p>
+          <p>
+            Beim Zusammentreffen mit einem Methanmolekül können die
+            Chlorradikale eine $\ce{C-H}$-Bindung homolytisch spalten und selbst
+            zu $\ce{H-Cl}$ Molekülen reagieren. Es bleibt ein Methylradikal
+            zurück. Dieses Methylradikal kann dann wieder mit Chlormolekülen zu
+            Chlormethan und Chlorradikalen reagieren.
+          </p>
+          <img
+            src="img/Alkane/kettenreaktion.png"
+            alt="kettenreaktion"
+            class="zeichnungen"
+          />
+          <p>
+            Die bei der Reaktion gebildeten Chlorradikale können wieder als
+            Edukte für eine nächste, gleichartige Reaktion dienen. Es entsteht
+            eine sich selbst unterhaltende radikalische Reaktionskette.
+          </p>
+        </li>
+        <li>
+          <p><u>Kettenabbruch</u></p>
+          <p>
+            Ein Kettenabbruch erfolgt, wenn die reaktionsfreudigen Radikale dem
+            Reaktionsgemisch entzogen werden:
+          </p>
+          <img
+            src="img/Alkane/kettenabbruch.png"
+            alt="Kettenabbruch"
+            class="zeichnungen"
+          />
+        </li>
+      </ol>
     </div>
     <div class="scrollButton">
       <a href="#">Zeréck no uewen</a>
