--- a/changeLog.html
+++ b/changeLog.html
@@ -117,7 +117,11 @@
               <li class="changeLogText">
                 Neit Kapitel an der Physik : Radioaktivität
               </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Chemie : Cycloalkane
+              </li>
               <li class="changeLogText">Neit Kapitel an der Chemie : Alkene</li>
+              <li class="changeLogText">Ergänzungen am Kapitel: Alkane</li>
               <li class="changeLogText">Nei Spréch!</li>
             </ul>
             <h3>Update 36</h3>
