--- a/Chemie/alkane.html
+++ b/Chemie/alkane.html
@@ -230,6 +230,34 @@
       </ol>
       <strong>Physikalische Eigenschaften</strong>
       <hr />
+      <h2>Tabelle der zwischenmolekularen Kräfte</h2>
+      <div class="xScrollable">
+        <table>
+          <tr>
+            <th><p>Name</p></th>
+            <th><p>Zwischenmolekulare Kräfte</p></th>
+          </tr>
+          <tr>
+            <td><p>Alkane</p></td>
+            <td><p>van-der-Waals-Kräfte</p></td>
+          </tr>
+          <tr>
+            <td><p>Alkene</p></td>
+            <td>
+              <p>van-der-Waals-Kräfte; <br />Dipol-Dipol-Wechselwirkungen</p>
+            </td>
+          </tr>
+          <tr>
+            <td><p>Alkanole</p></td>
+            <td>
+              <p>
+                van-der-Waals-Kräfte; <br />Dipol-Dipol-Wechselwirkungen; <br />
+                Wasserstoffbrückenbindungen
+              </p>
+            </td>
+          </tr>
+        </table>
+      </div>
       <h2>
         Auswirkungen der zwischenmolekularen Kräfte auf die Stoffeigenschaften
       </h2>
