--- a/Chemie/alkene.html
+++ b/Chemie/alkene.html
@@ -25,7 +25,7 @@
       <h1>Alkene</h1>
       <h2>Grundlagen</h2>
       <p>
-        Alkene sind ungesättigte Kohlenwasserstoffe.Das bedeutet einige
+        Alkene sind ungesättigte Kohlenwasserstoffe. Das bedeutet einige
         Kohlenstoffatome sind durch Doppelbindungen verbunden.
       </p>
       <h2>Homologe Reihe der Alkene</h2>
@@ -78,9 +78,52 @@
       </p>
       <h2>Isomerie</h2>
       <p>Isomerie ist</p>
+      <p>
+        Isomere sind unterschiedliche Moleküle welche die gleiche Summenformel
+        besitzen. Sie können durch unterschiedliche Strukturformeln dargestellt
+        werden.
+      </p>
       <h2>Nomenklatur</h2>
-      <p></p>
-      <h2>Physikalische Eigenschaften</h2>
+      <h3>Regeln</h3>
+      <ul>
+        <li>
+          <p>Die längste Kette die, die Doppelbindung enthält wird gewählt</p>
+        </li>
+        <li>
+          <p>
+            Die Nummerierungsrichtung wird so gewählt, dass die Doppelbindungen
+            die kleinsten Positionen erhalten.
+          </p>
+        </li>
+      </ul>
+      <h2>Tabelle der zwischenmolekularen Kräfte</h2>
+      <div class="xScrollable">
+        <table>
+          <tr>
+            <th><p>Name</p></th>
+            <th><p>Zwischenmolekulare Kräfte</p></th>
+          </tr>
+          <tr>
+            <td><p>Alkane</p></td>
+            <td><p>van-der-Waals-Kräfte</p></td>
+          </tr>
+          <tr>
+            <td><p>Alkene</p></td>
+            <td>
+              <p>van-der-Waals-Kräfte; <br />Dipol-Dipol-Wechselwirkungen</p>
+            </td>
+          </tr>
+          <tr>
+            <td><p>Alkanole</p></td>
+            <td>
+              <p>
+                van-der-Waals-Kräfte; <br />Dipol-Dipol-Wechselwirkungen; <br />
+                Wasserstoffbrückenbindungen
+              </p>
+            </td>
+          </tr>
+        </table>
+      </div>
       <p></p>
       <h2>Chemische Eigenschaften</h2>
       <p>
@@ -111,6 +154,213 @@
         Bei einer Additionsreaktion werden Atome oder Atomgruppen an die
         Doppelbindung eines ungesättigten Ausgangsstoffs angelagert. Es entsteht
         eine gesättigte Verbindung.
+      </p>
+      <h2>
+        Mechanismus der elektrophilen Addition eines Halogens an ein Alken
+      </h2>
+      <p>Hier reagiert beispielsweise Ethen mit Brom zu 1,2-Dibromethan:</p>
+      $$ \ce{C2H4 + Br2 -> C2H4Br2} $$
+      <ol>
+        <li>
+          <p>
+            Es erfolgt der elektrophile, also der elektronenfreundliche, Angriff
+            des Brommoleküls auf die $\ce{C=C}$ Doppelbindung.
+          </p>
+          <ul>
+            <li>
+              <p>
+                Beim Annähern des $\ce{Br2}$-Moleküls an die negativ geladene
+                Doppelbindung werden die Elektronen im Molekül zum hinteren
+                Bromatom zurückgedrängt. Das Brommolekül wird polarisiert. Es
+                bilden sich Teilladungen $\delta^+$ und $\delta^-$ .
+              </p>
+            </li>
+            <li>
+              <p>
+                Das $\delta^+$ geladene Bromatom tritt in Wechselwirkung mit den
+                $\pi$-Elektronen der Doppelbindung. Es entsteht ein
+                $\pi$-Komplex.
+              </p>
+            </li>
+            <li>
+              <p>
+                Die Bindung im $\ce{Br2}$-Molekül wird heterolytisch gespaltet
+                und ein Bromidion $\ce{Br-}$ freigesetzt. Das andere, positiv
+                geladene Brom-Ion bildet mit den beiden $\ce{C}$-Atomen
+                $\sigma$-Bindungen und es entsteht ein cyclisches Bromoniumion
+                genannt $\sigma$-Komplex.
+              </p>
+            </li>
+          </ul>
+          <img
+            src="img/Alkene/elektrophileAngriff.png"
+            alt="elektrophile Angriff"
+            class="zeichnungen"
+          />
+        </li>
+        <li>
+          <p>
+            Es erfolgt nun der nukleophile Angriff des Bromidions von der
+            Rückseite des Bromoniumions aus.
+          </p>
+          <img
+            src="img/Alkene/nuklephileAngriff.png"
+            alt="elektrophile Angriff"
+            class="zeichnungen"
+          />
+        </li>
+      </ol>
+
+      <h2>Elektrophiler Angriff</h2>
+      <p>
+        Bei einer elektrophilen Reaktion (hier: Addition) erfolgt die erste
+        Wechselwirkung im Mechanismus durch ein elektronenanziehendes Teilchen.
+        Der Angriff erfolgt auf einen Bereich mit hoher negativer Ladungsdichte.
+      </p>
+      <h2>$+I$-Effekt</h2>
+      <p>
+        Alkylgruppen erhöhen die negative Ladungsdichte an dem Atom an dem sie
+        gebunden sind; sie wirken elektronenschiebend.
+      </p>
+      <img
+        src="img/Alkane/plusIEffekt.png"
+        alt="plus I Effekt Reaktionsgeschwindigkeit"
+        class="zeichnungen"
+      />
+      <h2>$-I$-Effekt</h2>
+      <p>
+        Halogene oder Hydroxygruppen verringern die negative Ladungsdichte an
+        dem Atom an dem sie gebunden sind; sie wirken elektronenziehend.
+      </p>
+      <h2>Induktiver Effekt</h2>
+      <p>
+        Der induktive Effekt bewirkt die Veränderung der Elektronendichte an
+        benachbarten beziehungsweise weiter entfernt liegenden Atomen durch
+        <q>elektronenschiebende</q> $+I$ oder <q>elektronenziehende</q> $-I$
+        Substituenten.
+      </p>
+      <h2>Auswirkungen</h2>
+      <img
+        src="img/Alkane/plusIEffektReaktionsgeschwindigkeit.png"
+        alt="plus I Effekt Reaktionsgeschwindigkeit"
+        class="zeichnungen"
+      />
+      <ul>
+        <li>
+          <p>
+            Elektronenschiebende $+I$ Atome oder Atomgruppen an der
+            Doppelbindung erhöhen die negative Ladungsdichte an der
+            Doppelbindung und begünstigen einen elektrophilen Angriff. Die
+            Reaktionsgeschwindigkeit der Additionsreaktion wird erhöht.
+          </p>
+        </li>
+        <li>
+          <p>
+            Elektronenziehende $-I$ Atome oder Atomgruppen an der Doppelbindung
+            verringern die negative Ladungsdichte an der Doppelbindung und
+            behindern einen elektrophilen Angriff. Die Reaktionsgeschwindigkeit
+            der Additionreaktion wird verringert.
+          </p>
+        </li>
+      </ul>
+      <h2>
+        Auswirkungen des induktiven Effekts auf die Art der Reaktionsprodukte
+      </h2>
+      <p>
+        Bei der Addition von unsymmetrischen Molekülen an eine Doppelbindung hat
+        der induktive Effekt nicht nur einen Einfluss auf die
+        Reaktionsgeschwindigkeit, sondern ebenfalls auf die Art des gebildeten
+        Produkts. <br />
+        Hier als Beispiel: Reaktion von Chlorwasserstoff mit Propen
+      </p>
+      <h2>
+        Reaktionsmechanismus der Addition eines Halogenwasserstoffs an ein Alken
+      </h2>
+      <p>
+        Es erfolgt der elektrophile Angriff von $\ce{HCl}$ auf die
+        Doppelbindung:
+      </p>
+      <img
+        src="img/Alkane/Reaktionsmechanismus der Addition eines Halogenwasserstoffs an ein Alken Etappe 1.png"
+        alt="plus I Effekt Reaktionsgeschwindigkeit"
+        class="zeichnungen"
+      />
+      <p>
+        Beim elektrophilen Angriff des Wasserstoffatoms entsteht kein cyclisches
+        Kation sondern die positive Ladung konzentriert sich auf eines der
+        Kohlenstoffatome die an der Doppelbindung beteiligt waren. Es entsteht
+        ein Carbokation. Je nachdem, an welches der beiden C-Atome der
+        Doppelbindung sich das Wasserstoffatom bindet, können zwei verschiedene
+        Carbokationen entstehen, die dann zu zwei verschiedenen Produkten
+        weiterreagieren:
+      </p>
+      <img
+        src="img/Alkane/Reaktionsmechanismus der Addition eines Halogenwasserstoffs an ein Alken Etappe 2.png"
+        alt="plus I Effekt Reaktionsgeschwindigkeit"
+        class="zeichnungen"
+      />
+      <p>
+        Allerdings sind die beiden Carbokationen A und B unterschiedlich gut
+        stabilisiert und werden dadurch unterschiedlich schnell gebildet.
+      </p>
+      <ul>
+        <li>
+          <p>
+            Die positive Ladungsdichte des Carbokations A wird durch den
+            elektronenschiebenden Effekt von einer Alkylgruppe, hier:
+            Methylgruppe, verringert; die des Carbokations B durch zwei
+            $+I$-Effekte.
+          </p>
+        </li>
+        <li>
+          <p>
+            In Carbokation B ist die positive Ladung besser verteilt; es ist
+            besser stabilisiert als Carbokation A.
+          </p>
+        </li>
+      </ul>
+      <p>
+        Die Bildung des stabileren Carbokations B erfordert eine kleinere
+        Aktivierungsenergie als die Bildung von A. Da sich das Carbokation B
+        einfacher und schneller bildet als A entsteht auch bevorzugt das
+        Reaktionsprodukt, das aus B hervorgeht: 2-Chlorpropan.
+      </p>
+      <h3>Schlussfolgerung</h3>
+      <p>
+        Es entsteht bevorzugt dasjenige Produkt, dessen Bildung über das besser
+        stabilisierte Carbokation, auch genannt Carbeniumion, verläuft. Die
+        Stabilität eines Carbokations steigt mit der Anzahl an Alkylgruppen die
+        es trägt.
+      </p>
+      <h2>Stabilität von Carbokationen</h2>
+      <p>
+        Die Stabilität von Carbokationen wird durch die Atome oder Atomgruppen
+        die es trägt beeinflusst
+      </p>
+      <ul>
+        <li>
+          <p>
+            $+I$-Atome oder Gruppen verringern die positive Ladung des
+            Carbokations und erhöhen seine Stabilität.
+          </p>
+        </li>
+        <li>
+          <p>
+            $-I$-Atome oder Gruppen erhöhen die positive Ladung des Carbokations
+            zusätzlich. Sie verringern seine Stabilität.
+          </p>
+        </li>
+      </ul>
+      <img
+        src="img/Alkane/stabilitaetVonCarbokationen.png"
+        alt="Stabilität von Carbokationen"
+        class="zeichnungen"
+      />
+      <h2>Markownikow-Orientierung</h2>
+      <p>
+        Bei der Anlagerung von Halogenwasserstoffen an asymmetrische Alkene wird
+        das Wasserstoffatom an das das wasserstoffreichere Kohlenstoffatom
+        gebunden. Man sagt: <i>”Wer hat dem wird gegeben”</i>.
       </p>
     </div>
     <div class="scrollButton">
