--- a/Elektrotechnik/index.html
+++ b/Elektrotechnik/index.html
@@ -21,6 +21,9 @@
           <a href="elektrischeFeld.html" class="indexLink">Elektrisches Feld</a>
         </li>
         <li>
+          <a href="halbleiter.html" class="indexLink">Halbleiter</a>
+        </li>
+        <li>
           <a href="induktionsgesetzHerleitung.html" class="indexLink"
             >Induktionsgesetz</a
           >
