--- a/changeLog.html
+++ b/changeLog.html
@@ -112,17 +112,24 @@
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
             <h3>Update 37</h3>
-            <time>.2023</time>
+            <time>12.3.2023</time>
             <ul>
               <li class="changeLogText">
                 Neit Kapitel an der Physik : Radioaktivität
+              </li>
+              <li class="changeLogText">
+                Neit Kapitel an der Physik : Formelsammlung Radioaktivität
               </li>
               <li class="changeLogText">
                 Neit Kapitel an der Chemie : Cycloalkane
               </li>
               <li class="changeLogText">Neit Kapitel an der Chemie : Alkene</li>
               <li class="changeLogText">Ergänzungen am Kapitel: Alkane</li>
+              <li class="changeLogText">Nei Exercicer: Alkohole,Intégration</li>
               <li class="changeLogText">Nei Spréch!</li>
+              <li class="changeLogText">
+                Biller sinn elo besser op d'Printfunktion ugepasst
+              </li>
             </ul>
             <h3>Update 36</h3>
             <time>5.3.2023</time>
