--- a/Technologie/kreisprozesse.html
+++ b/Technologie/kreisprozesse.html
@@ -43,7 +43,7 @@
       </p>
       <img
         class="zeichnungen"
-        src="img/rechtsgäningerKreisprozess.png"
+        src="img/rechtsgaenigeKreisprozesse.png"
         alt="rechtsgäninger Kreisprozess"
       />
       <p>
