--- a/Archiv/index.html
+++ b/Archiv/index.html
@@ -32,6 +32,9 @@
             <li>
               <a href="Chimie/html/alkene.html">Alkene</a>
             </li>
+            <li>
+              <a href="Chimie/html/alkanole.html">Alkanole</a>
+            </li>
           </ul>
         </li>
       </ol>
@@ -55,6 +58,14 @@
           <ul>
             <li>
               <a href="Mathe/html/produitScalaire.html">Produit Scalaire</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <p><u>Intégration</u></p>
+          <ul>
+            <li>
+              <a href="Mathe/html/integration.html">Intégration</a>
             </li>
           </ul>
         </li>
