--- a/Archiv/Chimie/html/alkanole.html
+++ b/Archiv/Chimie/html/alkanole.html
@@ -16,7 +16,7 @@
     <iframe
       title="Dokument"
       id="myPDF"
-      src="../pdf/Organische Chemie/Alkanole.pdf"
+      src="../pdf/Organische Chemie/Alkohole.pdf"
       frameborder="0"
     ></iframe>
   </body>
