--- a/Physik/formelsammlungRadioaktivitaet.html
+++ b/Physik/formelsammlungRadioaktivitaet.html
@@ -16,7 +16,7 @@
     <script defer src="../print.js"></script>
     <script async src="../Themes JavaScript/themeChapter.js"></script>
 
-    <title>TITLE</title>
+    <title>Formelsammlung Radioaktivität</title>
   </head>
   <body>
     <my-navigator></my-navigator>
@@ -36,7 +36,7 @@
       $$ \ce{^A_Z K_1 -> ^A_{Z+1}K_2 + ^0_{-1} \beta + ^0_0 \bar{\nu}}$$ $$
       \ce{^A_Z K_1 -> ^A_{Z-1}K_2 + ^0_{+1} \beta + ^0_0 \nu} $$
       <h3>Gammastrahlung</h3>
-      $$\ce{^A_Z K^* -> ^A_Z K^* + \gamma}$$
+      $$\ce{^A_Z K^* -> ^A_Z K + \gamma}$$
       <h3>Aktivität</h3>
       $$ A = - \frac{\Delta N}{\Delta t} $$ $$ A = \lambda \cdot N$$
       <h2>Grundgesetz des radioaktiven Zerfalls</h2>
