--- a/Physik/index.html
+++ b/Physik/index.html
@@ -79,6 +79,14 @@
           >
         </li>
       </ol>
+      <h2>Quantenphysik</h2>
+      <ol>
+        <li>
+          <a href="quantenmechanik.html" class="indexLink"
+            >Quanten&shy;mechanik</a
+          >
+        </li>
+      </ol>
       <h2>Relativitätstheorie</h2>
       <ol>
         <li>
