--- a/changeLog.html
+++ b/changeLog.html
@@ -111,6 +111,18 @@
             <h2>Ännerungen</h2>
             <!-- Write your comments here -->
             <!-- <li class="changeLogText"></li> -->
+            <h3>Update 38</h3>
+            <time>.3.2023</time>
+            <ul>
+              <li class="changeLogText">
+                Neit Kapitel an der Physik: Quantenmechanik
+              </li>
+              <li class="changeLogText">
+                Tabellen ginn elo op grousse Bildschirmer proper ugewiesen
+              </li>
+              <li class="changeLogText">Feeler goufe verbessert</li>
+              <li class="changeLogText">Nei Spréch!</li>
+            </ul>
             <h3>Update 37</h3>
             <time>12.3.2023</time>
             <ul>
